Fixed some styling

--- a/friends/templates/index.html
+++ b/friends/templates/index.html
@@ -11,15 +11,10 @@
 
 <style>
     body {
-        width: 90%;
+        width: 45%;
         margin: auto;
         height: 100%;
         font-family: Helvetica, Arial, sans-serif;
-    }
-
-    #friendsbox {
-        width: 400px;
-        height: auto;
     }
 
     #formleft,
@@ -40,7 +35,8 @@
     }
 
     table {
-        padding: 5px;
+        padding: 5px 0px 5px 0px;
+        width: 100%;
     }
 
     th,
